<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kirkkohler.myfirstproject.MainActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/startStopMusicBtn"
        android:layout_alignParentLeft="true"
        android:paddingBottom="16dp"
        android:text="@string/hello_world"
        android:textSize="16sp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/seattle_img_resource"
        android:padding="@dimen/activity_horizontal_margin"
        android:scaleType="fitXY"
        android:onClick="simpleAnimate"
        android:src="@drawable/spaceneedle2013" />

    <Button
        android:id="@+id/startStopMusicBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView"
        android:layout_toRightOf="@+id/textView1"
        android:onClick="startStopMusic"
        android:text="@string/startStopMusicBtn" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/startStopMusicBtn"
        android:padding="8dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/innerTextLarge"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ff22ff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <AnalogClock
            android:id="@+id/analogClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="false"
            android:layout_alignParentTop="false"
            android:layout_centerHorizontal="true"
            android:textSize="30sp" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignBottom="@+id/textView">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/launchSiteText"
                android:textColor="#2b54ff"
                android:textSize="16sp"
                android:layout_alignBottom="@+id/launchToastBtn"
                android:layout_toLeftOf="@+id/launchToastBtn" />

            <Button
                android:id="@+id/launchKirkKohlerWebsiteBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="false"
                android:layout_below="@+id/launchToastBtn"
                android:onClick="launchWebIntentSite"
                android:text="@string/launchKirkWebsiteBtn" />

            <Button
                android:id="@+id/launchToastBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="false"
                android:layout_alignWithParentIfMissing="false"
                android:layout_below="@+id/launchToastBtn"
                android:onClick="displayToast"
                android:text="@string/launchToastBtn" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_alignParentRight="false"
                android:layout_below="@+id/launchKirkKohlerWebsiteBtn"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editPinkText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/editPinkText"
                    android:inputType="text" />

                <Button
                    android:id="@+id/editTextBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="sendMessage"
                    android:text="@string/editTextBtn" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_embeddedWebsiteBtn"
                android:id="@+id/button_embeddedWebsiteBtn"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="false"
                android:layout_alignWithParentIfMissing="false"
                android:onClick="launchWebIntentEmbeddedSite" />
        </RelativeLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/image_spaceShip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:adjustViewBounds="false"
        android:contentDescription="@string/img_spaceShip"
        android:src="@drawable/spaceship"
        android:visibility="visible" />

</RelativeLayout>